backup-restore/recipes/couchdb/couchbackuprestore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbackuprestore 
  labels:
    run: couch-backuprestore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: couch-backuprestore
  template:
    metadata:
      labels:
        run: couch-backuprestore
    spec:
      containers:
      - name: backup
        image: <Image built from Dockerfile>
        volumeMounts:
         - mountPath: /mnt
           name: backup-volume
      imagePullSecrets:
      - name: couchbackuprestore-secret
      volumes:
      - name: backup-volume
        persistentVolumeClaim:
          claimName: backup-pvc
