backup-restore/recipes/couchdb/backuprestore-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: couchbackuprestore-egress
spec:
  podSelector:
    matchLabels:
      run: couch-backuprestore 
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          formation_id: example-couchdbcluster
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns 
    ports:
    - protocol: UDP
      port: 5353
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: couchdb-ingress
spec:
  podSelector:
    matchLabels:
      formation_id: example-couchdbcluster
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: couch-backuprestore
